--- a/steplab/5_npqll_analyse_data.Rmd
+++ b/steplab/5_npqll_analyse_data.Rmd
@@ -538,26 +538,27 @@ plt_all <- ggplot(data = df, aes(x = score_pretest_c, y = score_posttest_c)) +
 
 # grouped scatterplot with 
 plt_grp <- ggplot(data = df, aes(x = score_pretest_c, y = score_posttest_c)) +
-  geom_point(color = nondominant_col, position = position_jitter()) +
+  geom_point(color = nondominant_col, position = position_jitter(width = 0.1, height = 0.1)) +
   facet_wrap(. ~ group, nrow = 2) + 
   stat_smooth(formula = y ~ x, method = "lm", fullrange = T, se = T, alpha=0.2, color = dominant_col) +
   theme + 
   #'scale_x_continuous(breaks=seq(0, 10, 2)) +
-  xlab("Prior knowledge assessment") + ylab("Learning outcome assessment") +
+  xlab("Prior knowledge assessment") + ylab("") +
   ggpubr::stat_cor(method = "pearson", cor.coef.name = "r",
                    p.accuracy = .001, r.accuracy = .01,
-                   label.y = 2.5) +
+                   label.y = 2.5) #+
   # stat_regline_equation(label.y = 1.5, aes(label = ..eq.label..)) +
-  # stat_regline_equation(label.y = 1, aes(label = ..rr.label..)) +
-  theme(axis.title.y = element_blank())
+  # stat_regline_equation(label.y = 1, aes(label = ..rr.label..)) 
 # plt_grp
 
 plt <- ggpubr::ggarrange(plt_all, plt_grp, 
                          ncol = 2,
-                         labels = c("A", "B"))
+                         labels = c("A", "B"),
+                         font.label = list(family ="Segoe UI"))
+plt
 
-annotate_figure(plt, top = text_grob("Linearity between covariate and dependent variable", 
-                                     face = "bold", size = 14))
+#annotate_figure(plt, top = text_grob("Linearity between covariate and dependent variable", 
+#                                     face = "bold", size = 14))
 
 # plt <- ggplot(data = df, aes(x = score_pretest, y = score_posttest)) +
 #   geom_point(aes(color = group)) +
