--- a/steplab/5_npqll_analyse_data.Rmd
+++ b/steplab/5_npqll_analyse_data.Rmd
@@ -441,7 +441,7 @@ plt <- ggplot(data = df_l, aes(x = timepoint, y = score_c, group = user_id)) +
   stat_summary(fun.data = mean_se, geom = "errorbar", width = .05, col = dominant_col, group = 1) +
   xlab("Assessment") + ylab("Standardised score") + labs(col = "Introductory material") +
   labs(caption = "Error bars represent SE.") +
-  theme +
+  ambition_theme +
   theme(plot.caption = element_text(hjust=0))
 plt
 
@@ -541,12 +541,13 @@ plt_all <- ggplot(data = df, aes(x = score_pretest_c, y = score_posttest_c)) +
   geom_point(color = nondominant_col, position = position_jitter(width = 0.1, height = 0.1)) +
   #facet_wrap(. ~ group, nrow = 2) + 
   stat_smooth(formula = y ~ x, method = "lm", fullrange = T, se = T, alpha=0.2, color = dominant_col) +
-  theme + 
+  ambition_theme + 
   #'scale_x_continuous(breaks=seq(0, 10, 2)) +
   xlab("Prior knowledge assessment") + ylab("Learning outcome assessment") +
   ggpubr::stat_cor(method = "pearson", cor.coef.name = "r",
                    p.accuracy = 0.001, r.accuracy = 0.01,
-                   label.y = 2.5)  # stat_regline_equation(label.y = 1.5, aes(label = ..eq.label..)) +
+                   label.y = 2.5, 
+                   size = pt_to_mm(font_size), family = "Segoe UI")  # stat_regline_equation(label.y = 1.5, aes(label = ..eq.label..)) +
 # stat_regline_equation(label.y = 1, aes(label = ..rr.label..))
 # plt_all
 
@@ -555,12 +556,13 @@ plt_grp <- ggplot(data = df, aes(x = score_pretest_c, y = score_posttest_c)) +
   geom_point(color = nondominant_col, position = position_jitter(width = 0.1, height = 0.1)) +
   facet_wrap(. ~ group, nrow = 2) + 
   stat_smooth(formula = y ~ x, method = "lm", fullrange = T, se = T, alpha=0.2, color = dominant_col) +
-  theme + 
+  ambition_theme + 
   #'scale_x_continuous(breaks=seq(0, 10, 2)) +
   xlab("Prior knowledge assessment") + ylab("") +
   ggpubr::stat_cor(method = "pearson", cor.coef.name = "r",
                    p.accuracy = .001, r.accuracy = .01,
-                   label.y = 2.5) #+
+                   label.y = 2.5, 
+                   size = pt_to_mm(font_size), family = "Segoe UI") #+
   # stat_regline_equation(label.y = 1.5, aes(label = ..eq.label..)) +
   # stat_regline_equation(label.y = 1, aes(label = ..rr.label..)) 
 # plt_grp
@@ -568,7 +570,7 @@ plt_grp <- ggplot(data = df, aes(x = score_pretest_c, y = score_posttest_c)) +
 plt <- ggpubr::ggarrange(plt_all, plt_grp, 
                          ncol = 2,
                          labels = c("A", "B"),
-                         font.label = list(family ="Segoe UI"))
+                         font.label = list(size = head_size, family = "Segoe UI"))
 plt
 
 #annotate_figure(plt, top = text_grob("Linearity between covariate and dependent variable", 
@@ -702,7 +704,7 @@ plt <- ggplot(data = emm, aes(x = group, y = emm)) +
   coord_cartesian(ylim = c(min(df$score_posttest), max(df$score_posttest))) +
   xlab("Introductory material") + ylab("Adjusted mean learning outcome assessment") +
   labs(caption = "Error bars represent SE.") +
-  theme +
+  ambition_theme +
   theme(plot.caption = element_text(hjust=0))
 plt
 
